--- a/3EEso.html
+++ b/3EEso.html
@@ -7,30 +7,23 @@
 	<link href="StyleSchool.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="Base.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <div class="navbar">
-    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-    <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-    <a href="Asignaturas.html"><i class="fa fa-fw fa-info"></i>Asignaturas</a>
-    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-    </div>
 </head>
 <body>
-    <div>
-        <center>
-            <table class="Centerofpage">
-                <tr>
-                    <td class="Tituloprincipal"> Bienvenidos a 3º Eso E</td>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Esta página web es para dar prestigio a nuestra clase</td>
-                </tr>
+    <div class="header">
+        <div class="inner_header">
+            <div class="logo_container">
+                <a href="3EEso.html"><h1>3ºE<span>ESO</span></h1></a>
+        </div>
 
-
-            </table>
-        </center>
+            <ul class="navigation">
+                <a href="./news.html"><li>News</li></a>
+                <a href="./Explanations.html"><li>Revise</li></a>
+                <a href="./tipsPage.html"><li>Tips</li></a>
+                <a href="./Gallery.html"><li>Gallery</li></a>
+                <a href="./testemail.html"><li>AboutUs</li></a>
+                <a href="./index.html"><li>SignOut</li></a>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
