--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <ul class="navigation">
                 <a href="./news.html"><li>News</li></a>
-                <a href="./Explanations.html"><li>Revise</li></a>
+                <a href="./Asignaturas.html"><li>Asignaturas</li></a>
                 <a href="./tipsPage.html"><li>Tips</li></a>
                 <a href="./Gallery.html"><li>Gallery</li></a>
                 <a href="./testemail.html"><li>AboutUs</li></a>
