--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -18,7 +18,7 @@
 
                 <ul class="navigation">
                     <a href="./news.html"><li>News</li></a>
-                    <a href="./Explanations.html"><li>Revise</li></a>
+                    <a href="./Adignaturas.html"><li>Asignaturas</li></a>
                     <a href="./tipsPage.html"><li>Tips</li></a>
                     <a href="./Gallery.html"><li>Gallery</li></a>
                     <a href="./testemail.html"><li>AboutUs</li></a>
