--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -18,7 +18,7 @@
 
                 <ul class="navigation">
                     <a href="./news.html"><li>News</li></a>
-                    <a href="./Adignaturas.html"><li>Asignaturas</li></a>
+                    <a href="./Asignaturas.html"><li>Asignaturas</li></a>
                     <a href="./tipsPage.html"><li>Tips</li></a>
                     <a href="./Gallery.html"><li>Gallery</li></a>
                     <a href="./testemail.html"><li>AboutUs</li></a>
@@ -72,7 +72,7 @@
                                     <td><p style=" font-weight: bold; font-size: 220% ;">4) FyQ</p>
                                         <pre>					    		
                                         </pre>
-                                        <a href="./Spanish.html"><img class="PhotoLink" src="https://thumbs.dreamstime.com/b/bandera-poligonal-de-espa%C3%B1a-fondo-moderno-del-mosaico-dise%C3%B1o-geom%C3%A9trico-129534028.jpg" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Spanish.html"><img class="PhotoLink" src="https://img.freepik.com/free-vector/hand-drawn-science-education-background_23-2148499325.jpg?w=2000" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
