--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -48,7 +48,7 @@
                                         <td><p style=" font-weight: bold; font-size: 220% ;">1) Mates</p>
                                             <pre>					    		
                                             </pre>
-                                            <a href="./Maths.html"><img class="PhotoLink" src="https://images.theconversation.com/files/274417/original/file-20190514-60529-ktb5t3.jpg?ixlib=rb-1.1.0&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./Mates.html"><img class="PhotoLink" src="https://images.theconversation.com/files/274417/original/file-20190514-60529-ktb5t3.jpg?ixlib=rb-1.1.0&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
@@ -64,7 +64,7 @@
                                     <td><p style=" font-weight: bold; font-size: 220% ;">3)Lengua</p>
                                         <pre>					    		
                                         </pre>
-                                        <a href="./Science.html"><img class="PhotoLink" src="https://img.freepik.com/free-vector/hand-drawn-science-education-background_23-2148499325.jpg?w=2000" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Science.html"><img class="PhotoLink" src="https://tse4.mm.bing.net/th?id=OIP.kP_K7zmwSTACA2NDefh6BAHaFj&pid=Api&P=0" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -83,7 +83,22 @@
                                         <a href="./History.html"><img class="PhotoLink" src="https://media.istockphoto.com/vectors/open-book-with-history-doodles-and-lettering-vector-id1092170968?k=20&m=1092170968&s=612x612&w=0&h=xuN5I9AhwUps398V6UqE1HL84Dcb4AheOPu9NeKJcrE=" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
-
+                                <tr>
+                                
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">5) Tecnología</p>
+                                        <pre>					    		
+                                        </pre>
+                                        <a href="./History.html"><img class="PhotoLink" src="https://st3.depositphotos.com/2605379/12886/i/950/depositphotos_128865174-stock-photo-hand-drawing-technology-doodle.jpg" style="height: 450px; width: 620px;"></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">5) Biología y Geología</p>
+                                        <pre>					    		
+                                        </pre>
+                                        <a href="./History.html"><img class="PhotoLink" src="https://tse2.mm.bing.net/th?id=OIP.ntdkQCG9kyTlWmVPkpU7nQHaEd&pid=Api&P=0" style="height: 450px; width: 620px;"></a>
+                                    </td>
+                                </tr>
                             </tbody>
                     </table>
             </center>
