--- a/Mates.html
+++ b/Mates.html
@@ -48,7 +48,9 @@
 					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 1</p>
 					    	<pre>					    		
 					    	</pre>
-							<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;">
+							<iframe width="420" height="315"
+								src="https://www.youtube.com/watch?v=A55XWvZVWGY">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
 								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
 							</p>
