--- a/Mates.html
+++ b/Mates.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="inner_header">
                 <div class="logo_container">
-                    <a href="./logedin.html"><h1>3ºE<span>ESO</span></h1></a>
+                    <a href="./index.html"><h1>3ºE<span>ESO</span></h1></a>
                 </div>
 
                 <ul class="navigation">
@@ -49,7 +49,7 @@
 					    	<pre>					    		
 					    	</pre>
 							<iframe width="420" height="315"
-								src="https://www.youtube.com/watch?v=A55XWvZVWGY">
+								src="https://www.youtube.com/embed/A55XWvZVWGY">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
 								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
