--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="inner_header">
             <div class="logo_container">
-                <a href="3EEso.html"><h1>3ºE<span>ESO</span></h1></a>
+                <a href="index.html"><h1>3ºE<span>ESO</span></h1></a>
         </div>
 
             <ul class="navigation">
