--- a/TemasMates.html
+++ b/TemasMates.html
@@ -45,23 +45,23 @@
                 <table class = "explanations_table">
                         <tbody>
                                     <tr>
-                                        <td><p style=" font-weight: bold; font-size: 220% ;">Mates</p>
+                                        <td><p style=" font-weight: bold; font-size: 220% ;">Tema1</p>
                                             <pre>					    		
                                             </pre>
-                                            <a href="./TemasMates.html"><img class="PhotoLink" src="https://images.theconversation.com/files/274417/original/file-20190514-60529-ktb5t3.jpg?ixlib=rb-1.1.0&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./Mates.html"><img class="PhotoLink" src="Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
 
-                                    <td><p style=" font-weight: bold; font-size: 220% ;">Inglés</p>
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">Tema2</p>
                                         <pre>					    		
                                         </pre>
-                                        <a href="./English.html"><img class="PhotoLink" src="https://2021-22.eva.educalab.es/iesmiguelfernandez/pluginfile.php/395/course/overviewfiles/Learn-English.jpg" style="height: 450px; width: 620px;"></a>
+                                        <a href="./English.html"><img class="PhotoLink" src="https://1.bp.blogspot.com/-cfGD9xsrny0/UlV7NryT32I/AAAAAAAAAzc/5_QY5zlNvpw/s320/potencias1.GIF" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     
-                                    <td><p style=" font-weight: bold; font-size: 220% ;">Lengua</p>
+                                    <td><p style=" font-weight: bold; font-size: 220% ;">Tema3</p>
                                         <pre>					    		
                                         </pre>
                                         <a href="./Science.html"><img class="PhotoLink" src="https://tse4.mm.bing.net/th?id=OIP.kP_K7zmwSTACA2NDefh6BAHaFj&pid=Api&P=0" style="height: 450px; width: 620px;"></a>
