--- a/TemasMates.html
+++ b/TemasMates.html
@@ -48,7 +48,7 @@
                                         <td><p style=" font-weight: bold; font-size: 220% ;">Tema1</p>
                                             <pre>					    		
                                             </pre>
-                                            <a href="./Mates.html"><img class="PhotoLink" src="Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
+                                            <a href="./Tema2.html"><img class="PhotoLink" src="Fracciones.png" alt="StudenStudying" style="height: 450px; width: 620px;"></a>
                                         </td>
                                     </tr>
                                 <tr>
@@ -56,7 +56,7 @@
                                     <td><p style=" font-weight: bold; font-size: 220% ;">Tema2</p>
                                         <pre>					    		
                                         </pre>
-                                        <a href="./English.html"><img class="PhotoLink" src="https://1.bp.blogspot.com/-cfGD9xsrny0/UlV7NryT32I/AAAAAAAAAzc/5_QY5zlNvpw/s320/potencias1.GIF" style="height: 450px; width: 620px;"></a>
+                                        <a href="./Tema2.html"><img class="PhotoLink" src="https://1.bp.blogspot.com/-cfGD9xsrny0/UlV7NryT32I/AAAAAAAAAzc/5_QY5zlNvpw/s320/potencias1.GIF" style="height: 450px; width: 620px;"></a>
                                     </td>
                                 </tr>
                                 <tr>
