--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -140,7 +140,7 @@
                 </ul>
             </div>
             <div class="footer_bottom">
-              <p>Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez, Candela Gonzalez & David González</span></p>
+              <p class="footer_text">Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez, Candela Gonzalez & David González</span></p>
             </div>
         </footer>
 </body>
