--- a/Asignaturas.html
+++ b/Asignaturas.html
@@ -128,8 +128,8 @@
         </div>
         <footer>
             <div class="footer_container">
-                <h3><center>Simplified School</center></h3>
-                <p><center>When you boil it down, it really can be simple</center></p>
+                <h3><center>3ºEso</center></h3>
+                <p><center>Por un curso excepcional</center></p>
                 <div class="footer_bottom">
                     <ul class="socials">
                         <li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
