--- a/TemasMates.html
+++ b/TemasMates.html
@@ -127,20 +127,21 @@
             <br>
         </div>
         <footer>
-			<div class="footer_container">
-				<h3><center>Simplified School</center></h3>
-				<p><center>When you boil it down, it really can be simple</center></p>
-				<ul class="socials">
-					<li><a href="https://www.facebook.com/hbvhsajhfsa/"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/404/"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="https://www.youtube.com/404/"><i class="fa fa-youtube"></i></a></li>
-					<li><a href="https://www.linkedin.com/404(/?_l=en_US"><i class="fa fa-linkedin-square"></i></a></li>
-				</ul>
-			</div>
-			<div class="footer_bottom">
-			  <p>Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez & David González</span></p>
-			</div>
-	</footer>
+            <div class="footer_container">
+                <h3><center>3ºEso</center></h3>
+                <p><center>Por un curso excepcional</center></p>
+                <div class="footer_bottom">
+                    <ul class="socials">
+                        <li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/hbvhsajhfsa/"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/404/"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://www.youtube.com/404/"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://www.linkedin.com/404(/?_l=en_US"><i class="fa fa-linkedin-square"></i></a></li>
+                    </ul>
+                    <p class="footer_text">Copyright &copy;2022 OutputtingCode. Designed by <span>Daniel Sánchez, Candela Gonzalez & David González</span></p>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
