--- a/Tema1.html
+++ b/Tema1.html
@@ -35,7 +35,7 @@
 
 
 			<div class="Subtitle_news">
-				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Maths</p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Matemáticas</p></center>
 			</div>
 		</pre>
 	</div>
@@ -52,27 +52,33 @@
 								src="https://www.youtube.com/embed/rSLuXOTdje8">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								La suma y resta de fracciones puede llegar a ser un poco complicada pero si simplificas y haces bien el mínimo común multiplo, no tiene ningún secreto.
 							</p>
 						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;"> Tip 2</p>
+						<th><p style=" font-weight: bold; font-size: 220% ;"> Multiplicación de Fracciones</p>
 					    	<pre>					    		
 					    	</pre>
-							
+							<iframe width="420" height="315"
+								src="https://www.youtube.com/embed/pHWhPo4_21s">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns
-								<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;"> studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								La Multiplicación de Fracciones, en mi opinión es de las operaciones más fáciles de hacer respecto a fracciones. Siempre es aconsejable reducir.
 							</p>
 						</th>
 					  </tr>
 					  <tr>
-					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 3</p>
+					    <th><p style=" font-weight: bold; font-size: 220% ;"> Fracción generatiz y decimales</p>
 					    	<pre>					    		
 					    	</pre>
-							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
-							</p>
-							<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;">
+							<iframe width="420" height="315"
+								src="https://www.youtube.com/embed/Iy7de-ytpxM">
+							</iframe>
+							<iframe width="420" height="315"
+								src="https://www.youtube.com/embed/ERz-ELOTdkc">
+							</iframe>
+							<iframe width="420" height="315"
+								src="https://www.youtube.com/embed/Pwzn-6ncSrM">
+							</iframe>
 						</th>
 						<th><p style=" font-weight: bold; font-size: 220% ;"> Maths Video!</p>
 					    	<pre>					    		
