--- a/Tema1.html
+++ b/Tema1.html
@@ -48,7 +48,7 @@
 					    <th><p style=" font-weight: bold; font-size: 220% ;"> Suma y resta de Fracciones</p>
 					    	<pre>					    		
 					    	</pre>
-							<iframe width="420" height="315"
+							<iframe width="120" height="415"
 								src="https://www.youtube.com/embed/rSLuXOTdje8">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
@@ -58,7 +58,7 @@
 						<th><p style=" font-weight: bold; font-size: 220% ;"> Multiplicación de Fracciones</p>
 					    	<pre>					    		
 					    	</pre>
-							<iframe width="420" height="315"
+							<iframe width="520" height="415"
 								src="https://www.youtube.com/embed/pHWhPo4_21s">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
@@ -80,25 +80,24 @@
 								src="https://www.youtube.com/embed/Pwzn-6ncSrM">
 							</iframe>
 						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;"> Maths Video!</p>
+						<th><p style=" font-weight: bold; font-size: 220% ;"> Troncho y Poncho</p>
 					    	<pre>					    		
 					    	</pre>
-							<video width="620" height="450 " controls>
-							  <source src="./Video Of Funny Cat.mp4" type="video/mp4">
-							</video>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/anfrZhAd3JU">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Troncho y Poncho es una serie de videos graciosos sobre matemáticas donde puedes pasar un buen rato a  la vez que aprendes mates.
 							</p>
 						</th>
 					  </tr>
 					  <tr>
-					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 5</p>
+					    <th><p style=" font-weight: bold; font-size: 220% ;"> Decimales</p>
 					    	<pre>					    		
 					    	</pre>
-							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
-							</p>
-							<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;">
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/dAk3iD93BBE">
+							</iframe>
 						</th>
 						<th><p style=" font-weight: bold; font-size: 220% ;">Math video!</p>
 					    	<pre>					    		
