--- a/Tema1.html
+++ b/Tema1.html
@@ -135,10 +135,9 @@
 			<p><center>Por un curso excepcional</center></p>
 			<div class="footer_bottom">
 				<ul class="socials">
-					<li><a href="https://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.instagram.com/dani_atm25/"><i class="fa fa-instagram"></i></a></li>
 					<li><a href="https://www.facebook.com/hbvhsajhfsa/"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="https://twitter.com/404/"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 					<li><a href="https://www.youtube.com/404/"><i class="fa fa-youtube"></i></a></li>
 					<li><a href="https://www.linkedin.com/404(/?_l=en_US"><i class="fa fa-linkedin-square"></i></a></li>
 				</ul>
