--- a/Tema1.html
+++ b/Tema1.html
@@ -36,6 +36,7 @@
 
 			<div class="Subtitle_news">
 				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Matemáticas</p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Tema 1</p></center>
 			</div>
 		</pre>
 	</div>
