--- a/Tema2.html
+++ b/Tema2.html
@@ -45,63 +45,67 @@
 			<table>
 					<tbody>
 					  <tr>
-					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 1</p>
+					    <th><p style=" font-weight: bold; font-size: 220% ;">Troncho y Poncho</p>
 					    	<pre>					    		
 					    	</pre>
-							<iframe width="420" height="315"
+							<iframe width="520" height="415"
 								src="https://www.youtube.com/embed/A55XWvZVWGY">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Troncho y Poncho es una serie de videos graciosos sobre matemáticas donde puedes pasar un buen rato a  la vez que aprendes mates.
 							</p>
 						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;"> Tip 2</p>
+						<th><p style=" font-weight: bold; font-size: 220% ;">Suma y Resta con Radicales</p>
 					    	<pre>					    		
 					    	</pre>
-							
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/Lfl4L98yqTg">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns
-								<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;"> studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
-							</p>
-						</th>
-					  </tr>
-					  <tr>
-					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 3</p>
-					    	<pre>					    		
-					    	</pre>
-							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
-							</p>
-							<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;">
-						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;"> Maths Video!</p>
-					    	<pre>					    		
-					    	</pre>
-							<video width="620" height="450 " controls>
-							  <source src="./Video Of Funny Cat.mp4" type="video/mp4">
-							</video>
-							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.								<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;"> studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
 							</p>
 						</th>
 					  </tr>
 					  <tr>
-					    <th><p style=" font-weight: bold; font-size: 220% ;"> Tip 5</p>
+					    <th><p style=" font-weight: bold; font-size: 220% ;">Multiplicación y División con Radicales </p>
 					    	<pre>					    		
 					    	</pre>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/Jota9Bmh4Ys">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
-							</p>
-							<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum							
+							</p>						
 						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;">Math video!</p>
+						<th><p style=" font-weight: bold; font-size: 220% ;">Reducir Radicales</p>
 					    	<pre>					    		
 					    	</pre>
-							<video width="620" height="450" controls>
-							  <source src="./Video Of Funny Cat.mp4" type="video/mp4">
-							</video>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/oJp5Az4rJ1U">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.							
+							</p>
+						</th>
+					  </tr>
+					  <tr>
+					    <th><p style=" font-weight: bold; font-size: 220% ;">Racionalización</p>
+					    	<pre>					    		
+					    	</pre>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/1RxpHLIcQUk">
+							</iframe>
+							<p style="font-size: 120%; font-weight: 400;">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.							
+							</p>						</th>
+						<th><p style=" font-weight: bold; font-size: 220% ;">Logarit</p>
+					    	<pre>					    		
+					    	</pre>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/vcLE0wNTdXo">
+							</iframe>
+							<p style="font-size: 120%; font-weight: 400;">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.							
 							</p>
 						</th>
 					  </tr>
