--- a/Tema2.html
+++ b/Tema2.html
@@ -62,7 +62,7 @@
 								src="https://www.youtube.com/embed/Lfl4L98yqTg">
 							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.								<img src="https://d2jyir0m79gs60.cloudfront.net/news/images/successful-college-student-lg.png" alt="StudenStudying" style="height: 450px; width: 620px;"> studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							</p>
 						</th>
 					  </tr>
