--- a/Tema2.html
+++ b/Tema2.html
@@ -136,7 +136,7 @@
 			<div class="footer_bottom">
 				<ul class="socials">
 					<li><a href="https://www.instagram.com/dani_atm25/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.facebook.com/hbvhsajhfsa/"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.facebook.com/people/Candela-Gonz%C3%A1lez-G%C3%B3mez/100008026695946/"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="https://twitter.com/404/"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 					<li><a href="https://www.youtube.com/404/"><i class="fa fa-youtube"></i></a></li>
