--- a/TemasMates.html
+++ b/TemasMates.html
@@ -5,7 +5,7 @@
         <title>3ºEEso</title>
         <link href="Logotipo patito bañera infantil colorido.png" rel="icon">
         <link href="StyleSchool.css" rel="stylesheet" type="text/css">
-        <script type="text/javascript" src="Base.js"></script>
+        <script type="text/javascript" src="Javascript.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>    
 <body class="Explanations">
