--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-            <img src="img_mountains_wide.jpg" style="width:100%">
+            <img src="https://tse3.mm.bing.net/th?id=OIP.FhYlCubIKPImuEdEhXoQ9QHaGB&pid=Api&P=0" style="width:100%">
           <div class="text">Caption Three</div>
         </div>
         
