--- a/Tema1.html
+++ b/Tema1.html
@@ -100,14 +100,14 @@
 								src="https://www.youtube.com/embed/dAk3iD93BBE">
 							</iframe>
 						</th>
-						<th><p style=" font-weight: bold; font-size: 220% ;">Math video!</p>
+						<th><p style=" font-weight: bold; font-size: 220% ;">Fracciones</p>
 					    	<pre>					    		
 					    	</pre>
-							<video width="620" height="450" controls>
-							  <source src="./Video Of Funny Cat.mp4" type="video/mp4">
-							</video>
+							<iframe width="520" height="415"
+								src="https://www.youtube.com/embed/7Xvlv3SCA4c">
+							</iframe>
 							<p style="font-size: 120%; font-weight: 400;">
-								Numerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown bllblblblblbNumerouns studies have shown
+								Lorem ipsum dolor sit amet consectetur adipiscing elit diam, laoreet parturient ultrices vestibulum integer interdum suspendisse, class blandit praesent cum semper fermentum ridiculus. Vel cursus netus nulla semper ut facilisi inceptos, auctor bibendum tristique aliquam suscipit et, curae fames ultrices odio porta imperdiet. Justo auctor senectus egestas malesuada suscipit nunc non platea cubilia, ultricies viverra praesent odio taciti suspendisse nibh ultrices vivamus, aenean tempor scelerisque tortor ut nec fermentum tincidunt.							
 							</p>
 						</th>
 					  </tr>
