--- a/index.html
+++ b/index.html
@@ -52,14 +52,17 @@
           <img src="img_mountains_wide.jpg" style="width:100%">
           <div class="text">Caption Three</div>
         </div>
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+
         
         </div>
         <br>
         
         <div style="text-align:center">
-          <span class="dot"></span> 
-          <span class="dot"></span> 
-          <span class="dot"></span> 
+          <span class="dot" onclick="currentSlide(1)"></span> 
+          <span class="dot"onclick="currentSlide(2)"></span> 
+          <span class="dot"onclick="currentSlide(3)"></span> 
         </div>        
     <footer>
         <div class="footer_container">
