--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="img_nature_wide.jpg" style="width:100%">
+          <img src="https://tse3.mm.bing.net/th?id=OIP.FhYlCubIKPImuEdEhXoQ9QHaGB&pid=Api&P=0" style="width:100%">
           <div class="text">Caption Text</div>
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="img_snow_wide.jpg" style="width:100%">
+          <img src="Florecillas.png" style="width:100%">
           <div class="text">Caption Two</div>
         </div>
         
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <img src="img_mountains_wide.jpg" style="width:100%">
+          <img src="Logotipo patito bañera infantil colorido.png" style="width:100%">
           <div class="text">Caption Three</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
