--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -49,6 +49,7 @@
                                             <pre>					    		
                                             </pre>
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
+                                            <input type="search" id="RAEsearch"></input>
                                         </td>
                                     </tr>
                                 <tr>
