--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -49,8 +49,19 @@
                                             <pre>					    		
                                             </pre>
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
-                                            <input type="search" id="RAEsearch"></input>
-                                        </td>
+                                            <center>
+                                                <form class="form">
+                                                    <input type="search" id="RAEsearch">
+                                                    <label class="lbl-nombre">
+                                                        <span class="text-nomb">
+                                                            Buscar
+                                                        </span>
+                                                    </label>    
+                                                </form>
+                                                <br>
+                                                <button onclick="Search()" class="Search">Search</button>
+                                            </center>
+                                            </td>
                                     </tr>
                                 <tr>
 
