--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -51,15 +51,10 @@
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
                                             <center>
                                                 <form class="form">
-                                                    <input type="search" id="RAEsearch">
-                                                    <label class="lbl-nombre">
-                                                        <span class="text-nomb">
-                                                            Buscar
-                                                        </span>
-                                                    </label>    
+                                                    <input type="search" id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="Search()" class="Search">Search</button>
+                                                <button onclick="RAESearch()" class="Search">Search</button>
                                             </center>
                                             </td>
                                     </tr>
