--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="Javascript.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>    
-<body class="Explanations" onload="showSlides()">
+<body class="Explanations" >
         
         <div class="header">
             <div class="inner_header">
