--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -54,7 +54,7 @@
                                                     <input type="search" id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="RAESearch()" class="Search">Search</button>
+                                                <button onclick="RAESearchs()" class="Search">Search</button>
                                             </center>
                                             </td>
                                     </tr>
