--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -6,6 +6,9 @@
         <link href="Logotipo patito bañera infantil colorido.png" rel="icon">
         <link href="StyleSchool.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="Javascript.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>    
 <body class="Explanations" >
@@ -51,10 +54,10 @@
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
                                             <center>
                                                 <form class="form">
-                                                    <input type="search" id="RAEsearch"> 
+                                                    <input type="search"  id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="RAESearchs()" class="Search">Search</button>
+                                                <button onclick="RAESearchs()" class="btn btn-outline-success">Search</button>
                                             </center>
                                             </td>
                                     </tr>
