--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -6,6 +6,7 @@
         <link href="Logotipo patito bañera infantil colorido.png" rel="icon">
         <link href="StyleSchool.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="Javascript.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>    
 <body class="Explanations" >
