--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -51,11 +51,15 @@
                                             </pre>
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
                                             <center>
-                                                <form class="form">
-                                                    <input type="search"  id="RAEsearch"> 
-                                                </form>
-                                                <br>
-                                                <button onclick="RAESearchs()" class="btn btn-outline-success">Search</button>
+                                                <div class="input-group">
+                                                    <div class="form-outline">
+                                                      <input type="search" id="form1" id="RAEsearch" class="form-control" />
+                                                      <label class="form-label" for="form1">Search</label>
+                                                    </div>
+                                                    <button type="button" class="btn btn-primary" onclick="RAESearchs()">
+                                                      <i class="fas fa-search"></i>
+                                                    </button>
+                                                  </div>
                                             </center>
                                             </td>
                                     </tr>
