--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -53,7 +53,7 @@
                                             <center>
                                                 <div class="input-group">
                                                     <div class="form-outline">
-                                                      <input type="search" id="form1" id="RAEsearch" class="form-control" />
+                                                      <input type="search" id="RAEsearch" class="form-control" />
                                                       <label class="form-label" for="form1">Search</label>
                                                     </div>
                                                     <button type="button" class="btn btn-primary" onclick="RAESearchs()">
