--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -55,7 +55,7 @@
                                                     <input type="search"  id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="RAESearchs()" class="btn btn-outline-success">Search</button>
+                                                <button onclick="RAESearchs()" class="btn btn-outline-success">Buscar</button>
                                             </center>
                                             </td>
                                     </tr>
