--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -51,11 +51,11 @@
                                             </pre>
                                             <img class="RAE" src="https://tse3.mm.bing.net/th?id=OIP.WKISB3RHh3Z_DQxykWiFWwHaFG&pid=Api&P=0" alt="StudenStudying" style="height: 450px; width: 620px;">
                                             <center>
-                                                <form class="form">
-                                                    <input type="search"  id="RAEsearch"> 
+                                                <form class="form-inline md-form mr-auto mb-4">
+                                                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="RAESearchs()" class="btn btn-outline-success">Buscar</button>
+                                                <button onclick="RAESearchs()" class="btn aqua-gradient">Buscar</button>
                                             </center>
                                             </td>
                                     </tr>
