--- a/Lengua Temas.html
+++ b/Lengua Temas.html
@@ -55,7 +55,7 @@
                                                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="RAEsearch"> 
                                                 </form>
                                                 <br>
-                                                <button onclick="RAESearchs()" class="btn aqua-gradient">Buscar</button>
+                                                <button onclick="RAESearchs()" class="btn btn-outline-success btn-rounded" data-mdb-ripple-color="dark">Buscar</button>
                                             </center>
                                             </td>
                                     </tr>
