--- a/Tema2.html
+++ b/Tema2.html
@@ -17,11 +17,11 @@
                 </div>
 
                 <ul class="navigation">
-                    <a href="./news.html"><li>News</li></a>
+                    <a href="./news.html"><li>Noticias</li></a>
                     <a href="./Asignaturas.html"><li>Asignaturas</li></a>
-                    <a href="./tipsPage.html"><li>Tips</li></a>
-                    <a href="./Gallery.html"><li>Gallery</li></a>
-                    <a href="./testemail.html"><li>AboutUs</li></a>
+                    <a href="./tipsPage.html"><li>Calendarios</li></a>
+                    <a href="./Gallery.html"><li>Chisme</li></a>
+                    <a href="./testemail.html"><li>Sobre Nosotros</li></a>
                     <a href="./index.html"><li>SignOut</li></a>
                 </ul>
             </div>
@@ -35,7 +35,8 @@
 
 
 			<div class="Subtitle_news">
-				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Maths</p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Matemáticas </p></center>
+				<center><p style="font-size: 350%; font-family: Helvetica; font-weight: bold;">Tema 2 </p></center>
 			</div>
 		</pre>
 	</div>
