--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <script type="text/javascript" src="Javascript.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body onload="Show">
+<body>
     <div class="header">
         <div class="inner_header">
             <div class="logo_container">
                 <a href="index.html"><h1>3ºE<span>ESO</span></h1></a>
-        </div>
+            </div>
 
             <ul class="navigation">
-                <a href="./news.html"><li>News</li></a>
+                <a href="./news.html"><li>Noticias</li></a>
                 <a href="./Asignaturas.html"><li>Asignaturas</li></a>
-                <a href="./tipsPage.html"><li>Tips</li></a>
-                <a href="./Gallery.html"><li>Gallery</li></a>
-                <a href="./testemail.html"><li>AboutUs</li></a>
+                <a href="./tipsPage.html"><li>Calendarios</li></a>
+                <a href="./Gallery.html"><li>Chisme</li></a>
+                <a href="./testemail.html"><li>Sobre Nosotros</li></a>
                 <a href="./index.html"><li>SignOut</li></a>
             </ul>
         </div>
